2017-11-03 18:06  0.2-beta1
  * Added tickit_window_{is,set}_steal_focus(3)
  * Added entire toplevel Tickit instance
  * New bind_events API style - one event + flags, instead of bitmask